@@ -1,6 +1,12 @@
 2007-11-23  Stefan Kost  <ensonic@users.sf.net>
 
 	* FSM/Infector/Infector.cpp:
+	* FSM/Infector/Vegetable.cpp:
+	  More debug logging. Enable destructor.
+
+2007-11-23  Stefan Kost  <ensonic@users.sf.net>
+
+	* FSM/Infector/Infector.cpp:
 	* FSM/Infector/Infector.h:
 	  Some more debug logging and cleanups.
 
